# verbal-arithmetic

./: README.md  stack.yaml  verbal-arithmetic.cabal
app/: General.hs  Main.hs  Special.hs
src/: Verbal.hs
