name:                verbal-arithmetic
version:             0.1.0.0
synopsis:            simple "verbal arithmetic" model by Haskell
description:         Please see README.md
homepage:            https://github.com/mitsuji/verbal-arithmetic#readme
license:             BSD3
license-file:        LICENSE
author:              Takamasa Mitsuji
maintainer:          tkms@mitsuji.org
copyright:           2016 Takamasa Mitsuji
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Verbal
  build-depends:       base >= 4.7 && < 5
                      ,parsec  
  default-language:    Haskell2010

executable verbal-arithmetic-special-exe
  hs-source-dirs:      app
  main-is:             Special.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable verbal-arithmetic-general-exe
  hs-source-dirs:      app
  main-is:             General.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                      ,verbal-arithmetic  
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitsuji/verbal-arithmetic
